# dioscuri

./: Cargo.toml
src/: client.rs  db.rs  event.rs  gemini.rs  header.rs  main.rs  response.rs  settings.rs  tls.rs
src/ui/: highlighter.rs  mod.rs  session.rs  toolbar.rs  viewport.rs
