[package]
name = "dioscuri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.8"
url = "2.2.2"
mime = "0.3.16"
nom = "7.1.0"
anyhow = "1.0.55"
webpki = { version = "0.22.0", features = ["std"] }
x509-parser = "0.13.0"
